# mdANSI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  README_CN.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: render.rs
scripts/: github-setup.sh
src/: cli.rs  error.rs  highlight.rs  hyperlink.rs  lib.rs  main.rs  parser.rs  render.rs  stream.rs  style.rs  table.rs  terminal.rs  theme.rs  wrap.rs
tests/: integration.rs
tests/fixtures/: basic.md
themes/: default.toml  dracula.toml  solarized.toml
