[package]
name = "mdansi"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Justin Huang"]
description = "A blazing-fast Markdown-to-ANSI terminal renderer with built-in syntax highlighting"
license = "MIT OR Apache-2.0"
repository = "https://github.com/justinhuangcode/mdANSI"
homepage = "https://github.com/justinhuangcode/mdANSI"
documentation = "https://docs.rs/mdansi"
readme = "README.md"
keywords = ["markdown", "ansi", "terminal", "cli", "syntax-highlighting"]
categories = ["command-line-utilities", "text-processing", "visualization"]
exclude = [".github/", "tests/fixtures/", "scripts/"]

[lib]
name = "mdansi"
path = "src/lib.rs"

[[bin]]
name = "mdansi"
path = "src/main.rs"

[dependencies]
# Markdown parsing — most complete GFM implementation in pure Rust
comrak = { version = "0.31", default-features = false, features = ["shortcodes"] }

# Syntax highlighting — same engine as Sublime Text / VS Code
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# Terminal interaction
crossterm = "0.28"

# Unicode width calculation (CJK, emoji aware)
unicode-width = "0.2"

# CLI framework
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Serialization for themes
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Strip ANSI escape codes for width calculation
strip-ansi-escapes = "0.2"

# Error handling
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
insta = { version = "1", features = ["glob"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4
